src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Would you like us to send you email when new operation was created?</description>
        <label>Email send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Image_Link_c__c</fullName>
        <formula>IF( Status_check__c = true,IMAGE(&quot;https://openclipart.org/download/292760/red_flag_3452435.svg&quot; , &quot;Возможно картинку удалили&quot; , 32,32),
IMAGE(&quot;https://openclipart.org/download/286397/RacingFlag3.svg&quot; , &quot;Возможно картинку удалили&quot; , 32,32))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank account status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sum_of_c__c</fullName>
        <label>Sum of c</label>
        <summarizedField>Bank_account__c.Money__c</summarizedField>
        <summaryFilterItems>
            <field>Bank_account__c.Type_of_bank_account__c</field>
            <operation>equals</operation>
            <value>Кредитовый счет</value>
        </summaryFilterItems>
        <summaryForeignKey>Bank_account__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_d__c</fullName>
        <label>Sum of d</label>
        <summarizedField>Bank_account__c.Money__c</summarizedField>
        <summaryFilterItems>
            <field>Bank_account__c.Type_of_bank_account__c</field>
            <operation>equals</operation>
            <value>Дебитовый счет</value>
        </summaryFilterItems>
        <summaryForeignKey>Bank_account__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_transactions_with_card__c</fullName>
        <label>Sum of transactions with card</label>
        <summarizedField>Operation__c.Money__c</summarizedField>
        <summaryFilterItems>
            <field>Operation__c.Current_Month_2__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Operation__c.Type_of_operation__c</field>
            <operation>equals</operation>
            <value>Операция с карточкой(списание/пополнение)</value>
        </summaryFilterItems>
        <summaryForeignKey>Operation__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_Roll__c</fullName>
        <label>Test Roll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_bank_account__c</fullName>
        <label>Type of bank account</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Private customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>d_c__c</fullName>
        <formula>Sum_of_d__c -   Sum_of_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>d-c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>This layout will be used to make it conveniently work with private Customers</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>This layout will be used to make it conveniently work with Organizations</description>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>false</active>
        <errorConditionFormula>ShippingPostalCode  &lt;&gt;  $User.PostalCode</errorConditionFormula>
        <errorMessage>Contact must be in Account ZIP Code</errorMessage>
    </validationRules>
</CustomObject>